--- a/app/assets/stylesheets/startup.scss
+++ b/app/assets/stylesheets/startup.scss
@@ -11,7 +11,7 @@ table {
   overflow-y:auto;
 }
 
-.table-border {
+.table-bg {
   background-color: rgba(0, 0, 0, 0.7);
 }
 
